Fix: background image scrollbar

--- a/Frontend/src/app/components/home/home.component.scss
+++ b/Frontend/src/app/components/home/home.component.scss
@@ -48,12 +48,17 @@
             display: flex;
             flex-direction: row;
             padding: 30px;
-
+            overflow-x: auto;
+            
+            ::-webkit-scrollbar{
+                display: none;
+            }
             &-book{
                 display: flex;
                 flex-direction: column;
-
+                padding: 20px;
                 &-cover{
+                    
                     img{
                         width: 300px;
                         height: 400px;
